[build-system]
requires = [
  "setuptools",
  "wheel",
  # Numpy 1.25 allows back-compiling and supports 3.9
  "numpy>=1.25; python_version >= '3.9'",
  # Last version to support 3.6-3.8
  "numpy==1.19; python_version > '3.0' and python_version < '3.9'",
  # Last version to support 2.7
  "numpy==1.16; python_version < '3.0'",
]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "1.2.2"
version_pattern = "MAJOR.MINOR.PATCH[.TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"',
]
"version.txt" = [
    "^v{version}",
]
"gradunwarp/core/globals.py" = [
    "^VERSION = '{version}'"
]

[tool.cibuildwheel]
# Do not bother building pypy wheels
skip = "pp*"
test-requires = ["pytest"]
test-command = "pytest --pyargs gradunwarp"

[tool.cibuildwheel.linux]
repair-wheel-command = """
auditwheel repair -w {dest_dir} {wheel}
pipx run abi3audit --strict --report {wheel}
"""

[tool.cibuildwheel.macos]
repair-wheel-command = """
delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}
pipx run abi3audit --strict --report {wheel}
"""

[tool.cibuildwheel.windows]
repair-wheel-command = """
delvewheel repair -w {dest_dir} {wheel}
pipx run abi3audit --strict --report {wheel}
"""
